--- a/KRMovieInfo/Info.plist
+++ b/KRMovieInfo/Info.plist
@@ -3,9 +3,11 @@
 <plist version="1.0">
 <dict>
 	<key>KOFIC_API_KEY1</key>
-	<string>영화진흥위원회 API KEY 1를 입력해주세요</string>
+	<string>e58b6e182b477a13069037bdea28ae58
+e58b6e182b477a13069037bdea28ae58
+</string>
 	<key>KOFIC_API_KEY2</key>
-	<string>영화진흥위원회 API KEY 2를 입력해주세요</string>
+	<string>b66533c829f90728a06c7e151f07ce1b</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
