fix: 모델타입 수정 및 파싱 오류 해결

--- a/KRMovieInfo/Info.plist
+++ b/KRMovieInfo/Info.plist
@@ -3,9 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>KOFIC_API_KEY1</key>
-	<string>e58b6e182b477a13069037bdea28ae58
-e58b6e182b477a13069037bdea28ae58
-</string>
+	<string>b66533c829f90728a06c7e151f07ce1b</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
